# LearningOpenGL

./: CMakeLists.txt  cpptest.cpp  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
